fix(packages/app): Sidecar not showing content when it's opened in the full-screen mode
Fixed this issue by removing the transition effect of Sidecar resizing

Fixes #2788

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -639,7 +639,7 @@ badge.clickable:hover {
 sidecar {
   flex: 0 0 0%;
   min-width: 0;
-  transition-property: flex, background-color, color, border-color;
+  transition-property: background-color, color, border-color;
   transition-duration: calc(var(--transition-duration) * 2); /* twice the normal duration */
   display: flex;
   flex-direction: column;
